--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -31,8 +31,7 @@
       <!-- Language controls under text areas, horizontal -->
     <div class="lang-bar-horizontal">
         <select id="language-source">
-            <option value="auto" selected>Detect language</option>
-            <option value="en">English</option>
+            <option value="en" selected>English</option>
             <option value="es">Spanish</option>
             <option value="fr">French</option>
             <option value="de">German</option>
@@ -42,12 +41,12 @@
             <option value="ru">Russian</option>
             <option value="ar">Arabic</option>
             <option value="hi">Hindi</option>
+            <option value="it">Italian</option>
         </select>
         <button id="switch-button">⇄</button>
         <select id="languauge-target">
-            <option value="auto" selected>Detect language</option>
             <option value="en">English</option>
-            <option value="es">Spanish</option>
+            <option value="es"selected>Spanish</option>
             <option value="fr">French</option>
             <option value="de">German</option>
             <option value="zh">Chinese (Simplified)</option>
@@ -56,6 +55,7 @@
             <option value="ru">Russian</option>
             <option value="ar">Arabic</option>
             <option value="hi">Hindi</option>
+            <option value="it">Italian</option>
         </select>
     </div>
 
