switching languages js

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -44,7 +44,7 @@
             <option value="it">Italian</option>
         </select>
         <button id="switch-button">⇄</button>
-        <select id="languauge-target">
+        <select id="language-target">
             <option value="en">English</option>
             <option value="es"selected>Spanish</option>
             <option value="fr">French</option>
