--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -15,11 +15,11 @@
     <div id="textMode" class="mode active">
       <!-- Stacked text areas -->
       <div class="panel">
-        <textarea id="inputText" placeholder="Enter text"></textarea>
+        <textarea id="input-text" placeholder="Enter text"></textarea>
       </div>
 
       <div class="panel">
-        <textarea id="outputText" class="output" readonly></textarea>
+        <textarea id="output-text" class="output" readonly></textarea>
         <button id="copyBtn">Copy</button>
       </div>
 
