--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -37,6 +37,7 @@
             <option value="ar">Arabic</option>
             <option value="hi">Hindi</option>
             <option value="it">Italian</option>
+            <option value="sl-SI">Slovenian</option>
         </select>
         <button id="switch-button">⇄</button>
         <select id="language-target">
@@ -51,6 +52,7 @@
             <option value="ar">Arabic</option>
             <option value="hi">Hindi</option>
             <option value="it">Italian</option>
+            <option value="sl-SI">Slovenian</option>
         </select>
     </div>
 
