--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -74,13 +74,13 @@
 
     <!-- Tabs -->
     <div class="tabs">
-        <button class="tab active" id="textTab" onclick="showTab('text')">
+        <button class="tab active" id="textTab">
             <img src="{{ url_for('static', filename='icons/text.png') }}" alt="Text" />
         </button>
-        <button class="tab" id="camera-button" onclick="showTab('camera')">
+        <button class="tab" id="camera-button">
             <img src="{{ url_for('static', filename='icons/camera.png') }}" alt="Camera" />
         </button>
-        <button class="tab" id="microphone-button" onclick="showTab('microphone')">
+        <button class="tab" id="microphone-button">
             <img src="{{ url_for('static', filename='icons/microphone.png') }}" alt="Microphone" />
         </button>
     </div>
