--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -6,9 +6,9 @@ body {
 }
 
 .container {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 20px;
+  max-width: 60%;
+  margin: 4% auto;
+  padding: 2%;
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -16,7 +16,7 @@ body {
 
 h1 {
   text-align: center;
-  margin-bottom: 25px;
+  margin-bottom: 2%;
   font-weight: 500;
   color: #202124;
 }
@@ -26,12 +26,13 @@ h1 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .tabs .tab {
-  width: 60px;
-  height: 60px;
+  width: 10%;
+  height: 100%;
+  aspect-ratio: 1;
   border-radius: 50%;
   border: none;
   background: #e8f0fe;  /* lighter background for unselected tabs */
@@ -68,7 +69,8 @@ h1 {
 
 /* Language selectors above text areas */
 .language-select {
-  width: 100%;
+  aspect-ratio: 5;
+  width: 15%;
   padding: 8px 12px;
   font-size: 15px;
   border-radius: 8px;
@@ -102,6 +104,7 @@ h1 {
 
 /* Textareas */
 textarea {
+  height: 20%;
   width: 100%;
   min-height: 160px;
   padding: 12px;
@@ -121,10 +124,13 @@ textarea.output {
 }
 
 /* Copy button inside panel */
-#copyBtn {
+.copyBtn {
+  width: 5%;
+  height: auto;
+  aspect-ratio: 1;
   position: absolute;
-  right: 12px;
-  bottom: 12px;
+  right: 1%;
+  bottom: 2%;
   padding: 6px 12px;
   font-size: 14px;
   border: none;
@@ -132,9 +138,18 @@ textarea.output {
   background: #f1f3f4;
   cursor: pointer;
   transition: background 0.2s;
+  overflow: hidden;
+  
+  
+  /*background-size: contain;*/
 }
-
-#copyBtn:hover {
+.copyBtn img{
+    height: 100%;
+    width: auto;
+    
+    object-fit: contain;
+}
+.copyBtn:hover {
   background: #e8eaed;
 }
 
@@ -217,8 +232,9 @@ textarea.output {
   position: absolute;
   left: 12px;
   bottom: 12px;
-  width: 40px;
-  height: 40px;
+  width: 5%;
+  height: auto;
+  aspect-ratio: 1;
   border: none;
   border-radius: 50%;
   background: #f1f3f4;
@@ -232,8 +248,9 @@ textarea.output {
 }
 
 .speaker-btn img {
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1;
 }
 
 .speaker-btn:hover {
