--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+  <audio id="player" controls></audio>
   <div class="container">
     <h1>ASL Translate App</h1>
 
@@ -18,18 +19,19 @@
   <!-- Source Text Area with Language Selector -->
   <div class="panel">
     <select class="language-select" id="language-source">
-      <option value="en" selected>English</option>
-      <option value="es">Spanish</option>
-      <option value="fr">French</option>
-      <option value="de">German</option>
+      <option value="en-US" selected>English</option>
+      <option value="es-ES">Spanish</option>
+      <option value="fr-FR">French</option>
+      <option value="de-DE">German</option>
       <option value="zh">Chinese (Simplified)</option>
-      <option value="ja">Japanese</option>
-      <option value="ko">Korean</option>
-      <option value="ru">Russian</option>
-      <option value="ar">Arabic</option>
-      <option value="hi">Hindi</option>
-      <option value="it">Italian</option>
-      <option value="sl-SI">Slovenian</option>
+      <option value="ja-JP">Japanese</option>
+      <option value="ko-KR">Korean</option>
+      <option value="ru-RU">Russian</option>
+      <option value="ar-XA">Arabic</option>
+      <option value="hi-IN">Hindi</option>
+      <option value="it-IT">Italian</option>
+      <option value="sr-RS">Serbian</option>
+      <option value="nl-BE">Dutch</option>
     </select>
     <textarea id="input-text" placeholder="Enter text"></textarea>
     <button class="speaker-btn" id="speaker-button-source">
@@ -50,17 +52,18 @@
         
     <select class="language-select" id="language-target">
       <option value="en">English</option>
-      <option value="es" selected>Spanish</option>
-      <option value="fr">French</option>
-      <option value="de">German</option>
+      <option value="es-ES">Spanish</option>
+      <option value="fr-FR">French</option>
+      <option value="de-DE">German</option>
       <option value="zh">Chinese (Simplified)</option>
-      <option value="ja">Japanese</option>
-      <option value="ko">Korean</option>
-      <option value="ru">Russian</option>
-      <option value="ar">Arabic</option>
-      <option value="hi">Hindi</option>
-      <option value="it">Italian</option>
-      <option value="sl-SI">Slovenian</option>
+      <option value="ja-JP">Japanese</option>
+      <option value="ko-KR">Korean</option>
+      <option value="ru-RU">Russian</option>
+      <option value="ar-XA">Arabic</option>
+      <option value="hi-IN">Hindi</option>
+      <option value="it-IT">Italian</option>
+      <option value="sr-RS">Serbian</option>
+      <option value="nl-BE">Dutch</option>
     </select>
     <textarea id="output-text" class="output" readonly></textarea>
     <button class="copyBtn" id="copy-button-target">
