--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -113,5 +113,6 @@
   </div>
 
   <script src="{{ url_for('static', filename='index.js') }}"></script>
+  <script>src="{{ url_for('static', filename='resizer.js') }}"</script>
 </body>
 </html>
