separate backend code

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -32,6 +32,7 @@
       <option value="it-IT">Italian</option>
       <option value="sr-RS">Serbian</option>
       <option value="nl-BE">Dutch</option>
+      <option value="kn-IN">Kannada</option>
     </select>
     <textarea id="input-text" placeholder="Enter text"></textarea>
     <button class="speaker-btn" id="speaker-button-source">
@@ -51,8 +52,8 @@
   <div class="panel">
         
     <select class="language-select" id="language-target">
-      <option value="en">English</option>
-      <option value="es-ES">Spanish</option>
+      <option value="en-US">English</option>
+      <option value="es-ES" selected>Spanish</option>
       <option value="fr-FR">French</option>
       <option value="de-DE">German</option>
       <option value="zh">Chinese (Simplified)</option>
@@ -64,6 +65,7 @@
       <option value="it-IT">Italian</option>
       <option value="sr-RS">Serbian</option>
       <option value="nl-BE">Dutch</option>
+      <option value="kn-IN">Kannada</option>
     </select>
     <textarea id="output-text" class="output" readonly></textarea>
     <button class="copyBtn" id="copy-button-target">
