--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -4,7 +4,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
+#player{
+  visibility: hidden;
+}
 .container {
   max-width: 60%;
   margin: 4% auto;
@@ -157,25 +159,6 @@ textarea.output {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
-/* Translate Button */
-#translateBtn {
-  display: block;
-  width: 100%;
-  padding: 14px;
-  background: #1a73e8;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  transition: background 0.2s;
-}
-
-#translateBtn:hover {
-  background: #1669c1;
-}
 
 /* Swap Button */
 .switch-container {
