--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <audio id="player" controls></audio>
+  <video id="preview" autoplay muted playsinline style="width:640px;height:360px;background:#000;"></video>
   <div class="container">
     <h1>ASL Translate App</h1>
 
@@ -123,5 +124,6 @@
   </div>
 
   <script src="{{ url_for('static', filename='index.js') }}"></script>
+  <script src="{{ url_for('static', filename='capture.js') }}"></script>
 </body>
 </html>
