camera start and stop

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -108,7 +108,9 @@
 
     <!-- Tabs -->
     <div class="tabs">
-      <button class="tab" id="camera-button">
+      <button class="tab" id="camera-button"
+        aria-pressed="false"
+      >
         <img src="{{ url_for('static', filename='icons/camera.png') }}" alt="Camera" />
       </button>
     </div>
